--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\H\u00e9lo\u00efse\\AppData\\Roaming\\NetBeans\\28\\build.properties
+user.properties.file=C:\\Users\\PCHP\\AppData\\Roaming\\NetBeans\\28\\build.properties
